--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <h2>Meet me on</h2>
           <ul class="icons">
             <li><a href="https://www.facebook.com/yann.lauwers" target="_blank"><img src="./images/social-color-1_logo-facebook.svg" alt="Facebook" class="facebook-logo"></a></li>
-            <li><a href="www.linkedin.com/in/yann-lauwers" target="_blank"><img src="./images/social-color-1_logo-linkedin.svg" alt="Linkedin" class="linkedin-logo"></a></li>
+            <li><a href="https://www.linkedin.com/in/yann-lauwers" target="_blank"><img src="./images/social-color-1_logo-linkedin.svg" alt="Linkedin" class="linkedin-logo"></a></li>
             <li><a href="https://www.instagram.com/yann_lauwers" target="_blank"><img src="./images/social-color-1_logo-instagram.svg" alt="Instagram" class="instagram-logo"></a></li>
           </ul>
         </div>
